// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.configs.prjcfg.refresher;

option go_package = "go.chromium.org/luci/cv/internal/configs/prjcfg/refresher;refresher";

// RefreshProjectConfigTask is used to import latest CV config for a LUCI
// Project from LUCI Config or disable a LUCI Project if `disable` is true.
//
// Queue: "refresh-project-config".
message RefreshProjectConfigTask {
  string project = 1;
  bool disable = 2;
}
